--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,17 @@
+@import url('https://fonts.googleapis.com/css?family=Josefin+Sans:600|Merriweather|Roboto:400,700');
+
 body {
   margin: 0;
   padding: 0;
-  font-family: sans-serif;
+  font-family: 'Roboto', sans-serif;
+  min-height: 100vh;
+  background-color: #fbfbfb;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5 {
+  font-family: 'Merriweather', serif;
 }
